--- a/src/app/pages/business-pagamentos/business-pagamentos.component.html
+++ b/src/app/pages/business-pagamentos/business-pagamentos.component.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagamentos</title>
     <link rel="stylesheet" href="business-pagamentos.component.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
     <div class="container">
@@ -18,49 +19,59 @@
         <mat-card class="card">
             <div class="table-container">
                 <mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+                    <!-- Coluna para Nome do Funcionário -->
                     <ng-container matColumnDef="funcionario">
                         <mat-header-cell *matHeaderCellDef> Nome do Funcionário </mat-header-cell>
                         <mat-cell *matCellDef="let element">
                             <div class="employee-info">
                                 <mat-icon>account_circle</mat-icon>
                                 <div>
-                                    <div class="employee-name">{{element.nome}}</div>
-                                    <div class="employee-role">{{element.cargo}}</div>
+                                    <div class="employee-name">{{ element.nome }}</div>
+                                    <div class="employee-role">{{ element.cargo }}</div>
                                 </div>
                             </div>
                         </mat-cell>
                     </ng-container>
 
+                    <!-- Coluna para Salário Fixo -->
                     <ng-container matColumnDef="salario">
-                        <mat-header-cell *matHeaderCellDef> Salário Fixo </mat-header-cell>
-                        <mat-cell *matCellDef="let element"> {{element.salario | currency:'BRL'}} </mat-cell>
-                    </ng-container>
+                      <mat-header-cell *matHeaderCellDef> Salário Fixo </mat-header-cell>
+                      <mat-cell *matCellDef="let element"> {{ element.salario | currency:'BRL' }} </mat-cell>
+                  </ng-container>
 
+
+                    <!-- Coluna para Valor da Comissão -->
                     <ng-container matColumnDef="comissao">
                         <mat-header-cell *matHeaderCellDef> Valor da Comissão </mat-header-cell>
-                        <mat-cell *matCellDef="let element"> {{element.comissao | currency:'BRL'}} </mat-cell>
+                        <mat-cell *matCellDef="let element"> {{ element.comissao | currency:'BRL' }} </mat-cell>
                     </ng-container>
 
+                    <!-- Coluna para Total Pago -->
                     <ng-container matColumnDef="total">
                         <mat-header-cell *matHeaderCellDef> Total Pago </mat-header-cell>
-                        <mat-cell *matCellDef="let element"> {{element.total | currency:'BRL'}} </mat-cell>
+                        <mat-cell *matCellDef="let element"> {{ element.total | currency:'BRL' }} </mat-cell>
                     </ng-container>
 
+                    <!-- Coluna para Data do Pagamento -->
                     <ng-container matColumnDef="dataPagamento">
                         <mat-header-cell *matHeaderCellDef> Data do Pagamento </mat-header-cell>
-                        <mat-cell *matCellDef="let element"> {{element.dataPagamento | date}} </mat-cell>
+                        <mat-cell *matCellDef="let element"> {{ element.dataPagamento | date:'dd/MM/yyyy' }} </mat-cell>
                     </ng-container>
 
+                    <!-- Coluna para Status de Pagamento -->
                     <ng-container matColumnDef="pago">
                         <mat-header-cell *matHeaderCellDef> Pago </mat-header-cell>
-                        <mat-cell *matCellDef="let element"> {{element.pago ? 'Sim' : 'Não'}} </mat-cell>
+                        <mat-cell *matCellDef="let element"> {{ element.pago ? 'Sim' : 'Não' }} </mat-cell>
                     </ng-container>
 
+                    <!-- Linhas da Tabela -->
                     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
                     <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
                 </mat-table>
             </div>
         </mat-card>
     </div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
 </body>
 </html>
